# media-scanner-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: ContentType.hpp  Scanner.cpp  Scanner.h  Server.cpp  Server.h  SharedState.hpp  main.cpp
